@@ -1303,10 +1303,10 @@ XS API: L<Coro::MakeMaker>.
 
 Low level Configuration, Thread Environment, Continuations: L<Coro::State>.
 
-=head1 AUTHOR
+=head1 AUTHOR/SUPPORT/CONTACT
 
- Marc Lehmann <schmorp@schmorp.de>
- http://home.schmorp.de/
+   Marc A. Lehmann <schmorp@schmorp.de>
+   http://software.schmorp.de/pkg/Coro.html
 
 =cut
 
